fix: fail closed on incomplete analysis